--- a/style.css
+++ b/style.css
@@ -1,38 +1,67 @@
-/* <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> */
-/* 
-  White: hsl(0, 0%, 100%)
+/* @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Quicksand:wght@300..700&display=swap'); */
 
-  Slate 300: hsl(212, 45%, 89%)
-  
-  Slate 500: hsl(216, 15%, 48%)
-  
-  Slate 900: hsl(218, 44%, 22%) */
-
-
-  *, ::after, ::before {
+  *, *::after, *::before {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
   }
 
-  .root {
-    --clr--white: hsl(0, 0%, 100%);
-    --clr--slate-light: hsl(212, 45%, 89%);
-    --clr--slate-med: hsl(216, 15%, 48%);
-    --clr--slate-dark: hsl(218, 44%, 22%)
-
+  :root {
+    --clr-white: hsl(0, 0%, 100%);
+    --clr-slate-light: hsl(212, 45%, 89%);
+    --clr-slate-med: hsl(216, 15%, 48%);
+    --clr-slate-dark: hsl(218, 44%, 22%);
   }
+
+  body {
+    font-family: "Outfit", sans-serif;
+  }
+
 
   .container {
     height: 100vh;
-    background-color: var(--clr--slate-light);
+    width: 100%;
+    background-color: var(--clr-slate-light);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
   }
 
   .card {
-    height: 400px;
-    width: 300px;
-    background-color: var(--clr--white);
+    background-color: var(--clr-white);
+    border-radius: 5%;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .card img {
+    border-radius: 3.5%;
+    object-fit: contain;
+  }
+
+  .card h2 {
+    margin: 1rem 0;
+  }
+
+  .card p {
+    color:hsl(216, 15%, 48%);
+    padding: 0 1.5rem;
+    margin: 0.5rem 0;
+  }
+  
+  .caption {
+    display: block;
+    align-self: center;
+    text-align: center;
+  }
+
+  @media screen and (max-width: 600px){
+    .card {
+        width: 86%;
+        padding: 1rem;
+    }
+
   }
