--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Quicksand:wght@300..700&display=swap'); */
-
   *, *::after, *::before {
     padding: 0;
     margin: 0;
@@ -17,7 +15,6 @@
     font-family: "Outfit", sans-serif;
   }
 
-
   .container {
     height: 100vh;
     width: 100%;
@@ -25,43 +22,40 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
   }
 
   .card {
     background-color: var(--clr-white);
-    border-radius: 5%;
-    padding: 2rem;
+    border-radius: 1rem;
+    padding: 16px;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 320px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, .1)
   }
 
   .card img {
-    border-radius: 3.5%;
-    object-fit: contain;
+    border-radius: 1rem;
   }
 
   .card h2 {
-    margin: 1rem 0;
+    font-size: 22px;
+    margin: 24px 0;
+    font-weight: 700;
+    line-height: 120%;
   }
 
   .card p {
+    font-size: 15px;
+    line-height: 125%;
+    letter-spacing: 0.2px;
     color:hsl(216, 15%, 48%);
-    padding: 0 1.5rem;
-    margin: 0.5rem 0;
+    padding: 0 1rem 1.2rem;
   }
   
   .caption {
     display: block;
     align-self: center;
     text-align: center;
-  }
-
-  @media screen and (max-width: 600px){
-    .card {
-        width: 86%;
-        padding: 1rem;
-    }
-
   }
